# fcitx-rskk

./: .travis.yml  Cargo.toml  README.md  install.sh
assets/: fcitx-rskk.conf  rskk.conf
fcitx-sys/: Cargo.toml  build.rs
fcitx-sys/src/: lib.rs
src/: fcitx.rs  im.rs  lib.rs
