[package]
name = "fcitx-rskk"
version = "0.0.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "rskk for fcitx"
repository = "https://github.com/lo48576/fcitx-rskk"
keywords = ["SKK"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/fcitx-rskk" }

[workspace]
members = [
    "fcitx-sys",
]
